@@ -1,3 +1,8 @@
+2002-04-17  Geoffrey Keating  <geoffk@redhat.com>
+
+	* dwarf2dbg.c (dwarf2_gen_line_info): Do emit duplicate line
+	numbers, gdb relies on them to detect the start of the prologue.
+
 2002-04-17  Martin Schwidefsky  <schwidefsky@de.ibm.com>
 
 	* config/tc-s390.c (tc_s390_fix_adjustable): Prevent adjustments to
